Unicorn Tears Challenge Reward Balancing (#155)
* Rebalance reward of Unicorn Tears Challenge.

* Add new Metaphysics upgrade: Alicornmancy

* Add test for when a Metaphysics upgrade is unlocked by default AND by another upgrade

* Unicornmancy now requires Chronomancy

* Fix bugs arising from sacrificing infinite unicorns

* Add new basge as well as upgrade to make that basge attainable

* Add ability to precraft unicorn tears when needed & wood when there are 0 kittens

* Add quick-sacrifice pin to left side

* Move complexity into religion.js to simplify code in other places

* Use CSS to make the new Fast Sacrifice Unicorns link look nice

---------

Co-authored-by: nuclear.unicorn <cheshire.panther@gmail.com>

--- a/res/theme_anthracite.css
+++ b/res/theme_anthracite.css
@@ -1115,13 +1115,15 @@ body.scheme_anthracite.with_background_image,
 .scheme_anthracite .res-cell.resource-value {
 	color: #a0a0a0;
 }
-.scheme_anthracite #fastHuntContainer > a { /* Text left column : "Send hunters (xx times)" */
+.scheme_anthracite #fastHuntContainer > a, /* Text left column : "Send hunters (xx times)" */
+.scheme_anthracite #fastSacrificeContainer > a {
 	font-size: 110%;
 }
-.scheme_anthracite #fastHuntContainer > a:hover {
+.scheme_anthracite #fastHuntContainer > a:hover,
+.scheme_anthracite #fastSacrificeContainer > a:hover {
 	text-shadow: 2px 2px 2px #000000;
 }
-.scheme_anthracite #fastHuntContainerCount { /* Text left column : "xx times" from Send hunters */
+.scheme_anthracite div.pin-link span.pin-link-quantity { /* Text left column : "xx times" from Send hunters */
 	color: #606060;
 	text-shadow: none !important;
 	font-size: smaller;
